@@ -15,13 +15,13 @@ There are up to eight samples available to play for different note velocities.</
 <p><b>Controls:</b></p>
 <ul>
 	<li><b>Bypass</b> - hot bypass switch, when turned on (led indicator is shining), the plugin does not affect the input signal.</li>
-	<li><b>Working area</b> - this control allows to switch the UI from trigger mode to instrument mode.</li>
+	<li><b>Workspace</b> - this control allows to switch the UI between trigger mode and instrument configuration mode.</li>
 	<li><b>Pause</b> - pauses any updates of the trigger graph.</li>
 	<li><b>Clear</b> - clears all graphs.</li>
 <?php if ($midi) {?>
 	<li><b>Channel</b> - the MIDI channel to use for MIDI note.</li>
 	<li><b>Note</b> - the note and the octave of the MIDI note generated by the trigger.</li>
-	<li><b>MIDI #</b> - the MIDI number of the note. Allows to change the number with mouse scroll or mouse double click.</li>
+	<li><b>MIDI number</b> - the MIDI number of the note. Allows to change the number with mouse scroll or mouse double click.</li>
 <?php } ?>
 	<li><b>In<?= $sm ?></b> - enables drawing of input signal graph and corresponding level meter.</li>
 	<li><b>SC</b> - enables drawing of sidechain graph and corresponding level meter.</li>
