@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.26 ===
+* Several updates of text labels.
 * Updated build scripts and dependencies.
 
 === 1.0.25 ===
